# SearchEngine

./: .gitignore  answers.json  config.json
Search_engine/: CMakeLists.txt  inverted_index.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Search_engine/config/: config.json  requests.json
Search_engine/include/: converter.h  inverted_index.h  server.h
Search_engine/resources/: file001.txt  file002.txt  file003.txt  file004.txt  file005.txt  file006.txt  file007.txt  file008.txt  file009.txt  file010.txt  file011.txt  file012.txt  file013.txt  file014.txt  file015.txt  file016.txt  file017.txt  file018.txt  file019.txt  file020.txt  file021.txt  file022.txt  file023.txt  file024.txt
Search_engine/src/: converter.cpp  inverted_index.cpp  main.cpp  server.cpp
Search_engine/tests/: index_tests.cpp
src/: main.cpp
